feat(server,console): add horizontal pod autoscaling
